[package]
name = "kathy_macros"
version = "0.1.0"
authors = ["June Welker <junewelker@gmail.com>"]
edition = "2021"
rust-version = "1.82"
description = "The proc-macros for the 'kathy' crate"
repository = "https://github.com/itsjunetime/kathy"
license = "MPL-2.0"
keywords = ["swift", "keypath", "nightly", "experimental"]
categories = ["data-structures", "no-std", "no-std::no-alloc", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.36"
proc-macro2 = "1.0.86"
